<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/BLACK40"
                android:elevation="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/asphalt_design_system_fragment_toolbar"
                    android:textColor="@color/BLACK100"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/asphalt_design_system_fragment_alert_badge_label" />

            <br.com.maximodouglas.designsystem.components.AlertBadge
                android:id="@+id/asphalt_design_system_fragment_alert_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />

            <include layout="@layout/divisor_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/asphalt_design_system_fragment_notification_badges_label" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <br.com.maximodouglas.designsystem.components.asphalt.AsphaltNotificationBadge
                    android:id="@+id/asphalt_design_system_fragment_notification_badge_no_digit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <br.com.maximodouglas.designsystem.components.asphalt.AsphaltNotificationBadge
                    android:id="@+id/asphalt_design_system_fragment_notification_badge_one_digit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp" />

                <br.com.maximodouglas.designsystem.components.asphalt.AsphaltNotificationBadge
                    android:id="@+id/asphalt_design_system_fragment_notification_badge_two_digit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp" />

            </LinearLayout>

            <include layout="@layout/divisor_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/asphalt_design_system_fragment_social_avatar_badges_label" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <br.com.maximodouglas.designsystem.components.asphalt.AsphaltSocialAvatarBadge
                    android:id="@+id/asphalt_design_system_fragment_social_avatar_badge_one_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/asphalt_round_corner_rectangle_shape_black80" />

                <br.com.maximodouglas.designsystem.components.asphalt.AsphaltSocialAvatarBadge
                    android:id="@+id/asphalt_design_system_fragment_social_avatar_badge_two_images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/asphalt_round_corner_rectangle_shape_black80" />

            </LinearLayout>

            <include layout="@layout/divisor_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/asphalt_design_system_fragment_nude_buttons_label" />

            <br.com.maximodouglas.designsystem.components.asphalt.AsphaltNudeButton
                android:id="@+id/asphalt_design_system_fragment_enabled_nude_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" />

            <br.com.maximodouglas.designsystem.components.asphalt.AsphaltNudeButton
                android:id="@+id/asphalt_design_system_fragment_disabled_nude_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" />

            <include layout="@layout/divisor_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/asphalt_design_system_fragment_ghost_buttons_label" />

            <br.com.maximodouglas.designsystem.components.asphalt.AsphaltGhostButton
                android:id="@+id/asphalt_design_system_fragment_enabled_ghost_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" />

            <br.com.maximodouglas.designsystem.components.asphalt.AsphaltGhostButton
                android:id="@+id/asphalt_design_system_fragment_disabled_ghost_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" />

            <include layout="@layout/divisor_line" />

        </LinearLayout>

    </ScrollView>

</layout>